syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/message-store-api/proto/generated/";

enum SenderType {
  CONTACT = 0;
  USER = 1;
}
enum MessageSubtype {
  MESSAGE = 0;
  FILE = 1;
}
enum MessageDirection {
  INBOUND = 0;
  OUTBOUND = 1;
}
enum MessageType {
  WEB_CHAT = 0;
  EMAIL = 1;
  VOICE = 2;
}

message MessageId {
  string id = 1;
  string conversationId = 2;
}

message Message {
  MessageId messageId = 1;
  string conversationInitiatorUsername = 2;
  MessageType type = 3;
  MessageSubtype subtype = 4;
  string content = 5;
  MessageDirection direction = 6;
  google.protobuf.Timestamp time = 7;

  SenderType senderType = 8;
  string senderId = 9;
  string senderUsername = 10;
}

message InputMessage {
  optional string conversationId = 1;
  optional string email = 2;
  SenderType senderType = 3;
  MessageType type = 4;
  MessageSubtype subtype = 5;
  optional string message = 6;
  optional string bytes = 7;
  MessageDirection direction = 8;
}